--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "thunk": "0.0.1"
   },
   "scripts": {
